# agents-backend

./: .gitignore  README.md  splitwise.py
backend/: main.py  pyproject.toml  splitwise.py
backend/agents/: shopping_agent_service.py
backend/agents/house_agent/: run.py  tools.py
backend/db/: models.py  mongo.py
backend/house_agent/: config.py  graph.py  llm.py  run.py  state.py  tools.py
backend/routers/: __init__.py  agent_messages.py  auth.py  health.py  house_agent.py  household.py  root.py  shop_agent.py  shopping_cart.py
backend/schemas/: agent_run.py  grocery_list.py  household.py  message.py  pantry.py  shopping_agent.py  user.py
backend/services/: feedback_service.py  grocery_service.py  household_service.py  pantry_service.py  user_service.py
backend/utils/: llm_client.py
house_agent/: graph.py  llm.py  requirements.txt  run.py  state.py  tools.py
